--- a/index.html
+++ b/index.html
@@ -3,54 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TH Soluções em TI</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>TH Soluções em TI - Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="sobre.html">Sobre Nós</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
-        <div class="hero">
-            <h1>Bem-vindo à TH Soluções em TI</h1>
-            <p>Soluções de tecnologia avançada para o seu negócio</p>
-            <a href="servicos.html" class="btn">Nossos Serviços</a>
-        </div>
     </header>
 
-    <section class="services">
-        <h2>Nossos Serviços</h2>
-        <div class="service-item">
-            <h3>Cyber Security</h3>
-            <p>Proteja sua infraestrutura digital com as melhores práticas de segurança.</p>
-        </div>
-        <div class="service-item">
-            <h3>Infraestrutura de Redes</h3>
-            <p>Planejamento e execução de cabeamento estruturado para uma rede segura e eficiente.</p>
-        </div>
-        <div class="service-item">
-            <h3>Segurança Eletrônica</h3>
-            <p>Sistemas avançados de vigilância para proteger seu ambiente físico.</p>
-        </div>
-        <div class="service-item">
-            <h3>Service Desk / Suporte</h3>
-            <p>Suporte técnico especializado para resolver seus problemas rapidamente.</p>
-        </div>
-        <div class="service-item">
-            <h3>IoT</h3>
-            <p>Transforme seu negócio com soluções inteligentes conectadas à Internet das Coisas.</p>
+    <section class="hero">
+        <h1>Bem-vindo à TH Soluções em TI</h1>
+        <p>Soluções inovadoras em Tecnologia da Informação para sua empresa.</p>
+    </section>
+
+    <section class="servicos">
+        <h2>Serviços</h2>
+        <div class="cards">
+            <div class="card">
+                <h3>Cyber Security</h3>
+                <p>Proteja seus dados e sua infraestrutura contra ameaças cibernéticas.</p>
+            </div>
+            <div class="card">
+                <h3>Infraestrutura de Redes</h3>
+                <p>Soluções completas de cabeamento estruturado e redes corporativas.</p>
+            </div>
+            <div class="card">
+                <h3>Segurança Eletrônica</h3>
+                <p>Monitoramento e sistemas de segurança para proteção física.</p>
+            </div>
+            <div class="card">
+                <h3>Service Desk</h3>
+                <p>Suporte técnico especializado para resolver problemas rapidamente.</p>
+            </div>
+            <div class="card">
+                <h3>IoT</h3>
+                <p>Desenvolvimento de soluções inteligentes para o seu negócio.</p>
+            </div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 TH Soluções em TI</p>
+        <p>&copy; 2024 TH Soluções em TI - Todos os direitos reservados.</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
