--- a/sobre.html
+++ b/sobre.html
@@ -3,51 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serviços - TH Soluções em TI</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Sobre Nós - TH Soluções em TI</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Página inicial</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sobre.html">Sobre Nós</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="services">
-        <h2>Serviços</h2>
-        <div class="services-list">
-            <div class="service-item">
-                <h3>Cyber Security</h3>
-                <p>Oferecemos soluções avançadas de segurança cibernética para proteger sua empresa contra ameaças digitais e garantir a integridade de seus dados.</p>
-            </div>
-            <div class="service-item">
-                <h3>Infraestrutura e Cabeamento Estruturado</h3>
-                <p>Implementamos e gerenciamos a infraestrutura de TI necessária para garantir a conectividade e o desempenho de seus sistemas.</p>
-            </div>
-            <div class="service-item">
-                <h3>Segurança Eletrônica</h3>
-                <p>Contamos com sistemas de segurança eletrônica modernos, como câmeras de vigilância, alarmes e controle de acesso, para proteger seu patrimônio.</p>
-            </div>
-            <div class="service-item">
-                <h3>Service Desk e Suporte</h3>
-                <p>Nosso time de suporte está sempre pronto para ajudar sua empresa a resolver problemas técnicos e melhorar o desempenho dos seus sistemas.</p>
-            </div>
-            <div class="service-item">
-                <h3>Internet das Coisas (IoT)</h3>
-                <p>Implementamos soluções de IoT para integrar dispositivos e otimizar processos, tornando sua empresa mais inteligente e conectada.</p>
-            </div>
-        </div>
+    <section class="sobre">
+        <h1>Sobre a TH Soluções em TI</h1>
+        <p>Somos uma empresa especializada em fornecer soluções de TI para empresas de todos os portes. Nosso foco é fornecer segurança, infraestrutura e inovação para os nossos clientes.</p>
     </section>
 
     <footer>
-        <p>© 2024 TH Soluções em TI</p>
+        <p>&copy; 2024 TH Soluções em TI - Todos os direitos reservados.</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
