--- a/servicos.html
+++ b/servicos.html
@@ -4,50 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serviços - TH Soluções em TI</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="sobre.html">Sobre Nós</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="services">
-        <h2>Nossos Serviços</h2>
-        <div class="services-list">
-            <div class="service-item">
+    <section class="servicos">
+        <h1>Nossos Serviços</h1>
+        <p>Oferecemos soluções completas em tecnologia, focando nas necessidades específicas de cada cliente.</p>
+        <div class="cards">
+            <div class="card">
                 <h3>Cyber Security</h3>
-                <p>Proteja sua infraestrutura digital com as melhores práticas de segurança.</p>
+                <p>Proteção total contra ameaças digitais.</p>
             </div>
-            <div class="service-item">
+            <div class="card">
                 <h3>Infraestrutura de Redes</h3>
-                <p>Planejamento e execução de cabeamento estruturado para uma rede segura e eficiente.</p>
+                <p>Planejamento e execução de cabeamento estruturado.</p>
             </div>
-            <div class="service-item">
+            <div class="card">
                 <h3>Segurança Eletrônica</h3>
-                <p>Sistemas avançados de vigilância para proteger seu ambiente físico.</p>
+                <p>Instalação de sistemas de monitoramento.</p>
             </div>
-            <div class="service-item">
-                <h3>Service Desk / Suporte</h3>
-                <p>Suporte técnico especializado para resolver seus problemas rapidamente.</p>
+            <div class="card">
+                <h3>Service Desk</h3>
+                <p>Suporte técnico para empresas de diversos segmentos.</p>
             </div>
-            <div class="service-item">
+            <div class="card">
                 <h3>IoT</h3>
-                <p>Transforme seu negócio com soluções inteligentes conectadas à Internet das Coisas.</p>
+                <p>Soluções inteligentes para automação de processos.</p>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 TH Soluções em TI</p>
+        <p>&copy; 2024 TH Soluções em TI - Todos os direitos reservados.</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
