--- a/contatos.html
+++ b/contatos.html
@@ -4,40 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - TH Soluções em TI</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="sobre.html">Sobre Nós</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="contact">
-        <h2>Entre em Contato</h2>
+    <section class="contato">
+        <h1>Entre em Contato</h1>
         <form action="#" method="POST">
-            <label for="name">Nome:</label>
-            <input type="text" id="name" name="name" required>
-
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="nome" required>
             <label for="email">E-mail:</label>
             <input type="email" id="email" name="email" required>
-
-            <label for="message">Mensagem:</label>
-            <textarea id="message" name="message" required></textarea>
-
+            <label for="mensagem">Mensagem:</label>
+            <textarea id="mensagem" name="mensagem" required></textarea>
             <button type="submit">Enviar</button>
         </form>
     </section>
 
     <footer>
-        <p>&copy; 2024 TH Soluções em TI</p>
+        <p>&copy; 2024 TH Soluções em TI - Todos os direitos reservados.</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
