--- a/contatos.html
+++ b/contatos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato - TH Soluções em TI</title>
+    <title>Contatos - TH Soluções em TI</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,20 +13,26 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sobre.html">Sobre Nós</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
-                <li><a href="contato.html">Contato</a></li>
+                <li><a href="contatos.html">Contato</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="contato">
+    <section class="contatos">
         <h1>Entre em Contato</h1>
         <form action="#" method="POST">
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" required>
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="mensagem">Mensagem:</label>
-            <textarea id="mensagem" name="mensagem" required></textarea>
+            <div class="form-group">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome" required>
+            </div>
+            <div class="form-group">
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="mensagem">Mensagem:</label>
+                <textarea id="mensagem" name="mensagem" required></textarea>
+            </div>
             <button type="submit">Enviar</button>
         </form>
     </section>
