--- a/sobre.html
+++ b/sobre.html
@@ -20,8 +20,10 @@
 
     <main class="conteudo">
         <section class="sobre">
-            <h1>Sobre a TH Soluções em TI</h1>
-            <p>Somos uma empresa especializada em fornecer soluções de TI para empresas de todos os portes. Nosso foco é fornecer segurança, infraestrutura e inovação para os nossos clientes.</p>
+            <header class="sobre-header">
+                <h1>Sobre a TH Soluções em TI</h1>
+                <p>Somos uma empresa especializada em fornecer soluções de TI para empresas de todos os portes. Nosso foco é fornecer segurança, infraestrutura e inovação para os nossos clientes.</p>
+            </header>
 
             <div class="info-section">
                 <h2>Missão</h2>
