--- a/sobre.html
+++ b/sobre.html
@@ -22,37 +22,37 @@
         <section class="sobre">
             <header class="sobre-header">
                 <h1>Sobre a TH Soluções em TI</h1>
-                <p>Somos uma empresa especializada em fornecer soluções de TI para empresas de todos os portes. Nosso foco é fornecer segurança, infraestrutura e inovação para os nossos clientes.</p>
+                <p>Somos especializados em soluções tecnológicas para empresas, focando em segurança, infraestrutura e inovação.</p>
             </header>
 
             <div class="info-section">
                 <h2>Missão</h2>
-                <p>Nossa missão é entregar soluções tecnológicas que garantam a segurança, eficiência e a evolução contínua de nossos clientes, com excelência e confiabilidade.</p>
+                <p>Entregar soluções seguras e eficientes, garantindo a evolução tecnológica de nossos clientes.</p>
             </div>
 
             <div class="info-section">
                 <h2>Visão</h2>
-                <p>Ser a empresa referência em soluções de TI no Brasil, conhecida por nossa inovação, excelência em atendimento e compromisso com a transformação digital de nossos clientes.</p>
+                <p>Ser referência em soluções de TI no Brasil, promovendo transformação digital e inovação.</p>
             </div>
 
             <div class="info-section">
                 <h2>Valores</h2>
                 <ul>
-                    <li><strong>Inovação:</strong> Buscamos sempre as melhores e mais modernas soluções tecnológicas.</li>
-                    <li><strong>Segurança:</strong> Garantimos a proteção e a confidencialidade dos dados dos nossos clientes.</li>
-                    <li><strong>Compromisso:</strong> Temos um compromisso com a qualidade e com o sucesso dos nossos clientes.</li>
-                    <li><strong>Ética:</strong> Atuamos com integridade, respeito e transparência em todos os processos.</li>
+                    <li><strong>Inovação:</strong> Soluções modernas e eficazes.</li>
+                    <li><strong>Segurança:</strong> Proteção de dados confiável.</li>
+                    <li><strong>Compromisso:</strong> Qualidade e sucesso para nossos clientes.</li>
+                    <li><strong>Ética:</strong> Transparência e respeito em todos os processos.</li>
                 </ul>
             </div>
 
             <div class="info-section">
                 <h2>História</h2>
-                <p>A TH Soluções em TI foi fundada em 2015 com o objetivo de fornecer soluções de tecnologia de ponta para empresas em diversos setores. Desde então, crescemos com o compromisso de ajudar nossos clientes a melhorar sua infraestrutura de TI, garantir segurança e impulsionar sua transformação digital. A empresa tem sido reconhecida pela qualidade de seus serviços e pela expertise de sua equipe.</p>
+                <p>Fundada em 2015, a TH Soluções em TI tem se destacado por oferecer soluções de ponta, com ênfase em segurança e transformação digital.</p>
             </div>
 
             <div class="info-section">
                 <h2>Equipe</h2>
-                <p>Contamos com uma equipe altamente qualificada de profissionais especializados em diferentes áreas de TI, desde segurança cibernética até automação inteligente. Nosso time está sempre em constante atualização para oferecer as melhores soluções para os nossos clientes.</p>
+                <p>Contamos com profissionais qualificados, sempre atualizados para oferecer as melhores soluções em TI.</p>
             </div>
         </section>
     </main>
