--- a/sobre.html
+++ b/sobre.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="sobre.html">Sobre Nós</a></li>
+                <li><a href="sobre.html" class="active">Sobre Nós</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
@@ -22,37 +22,37 @@
         <section class="sobre">
             <header class="sobre-header">
                 <h1>Sobre a TH Soluções em TI</h1>
-                <p>Somos especializados em soluções tecnológicas para empresas, focando em segurança, infraestrutura e inovação.</p>
+                <p>Somos especializados em soluções tecnológicas inovadoras para empresas, focando em segurança, infraestrutura e transformação digital.</p>
             </header>
 
             <div class="info-section">
                 <h2>Missão</h2>
-                <p>Entregar soluções seguras e eficientes, garantindo a evolução tecnológica de nossos clientes.</p>
+                <p>Oferecer soluções de TI que garantam segurança, eficiência e inovação para a evolução dos nossos clientes.</p>
             </div>
 
             <div class="info-section">
                 <h2>Visão</h2>
-                <p>Ser referência em soluções de TI no Brasil, promovendo transformação digital e inovação.</p>
+                <p>Ser a principal referência em soluções de TI no Brasil, com um compromisso contínuo com a inovação e a excelência no atendimento ao cliente.</p>
             </div>
 
             <div class="info-section">
                 <h2>Valores</h2>
                 <ul>
-                    <li><strong>Inovação:</strong> Soluções modernas e eficazes.</li>
-                    <li><strong>Segurança:</strong> Proteção de dados confiável.</li>
-                    <li><strong>Compromisso:</strong> Qualidade e sucesso para nossos clientes.</li>
-                    <li><strong>Ética:</strong> Transparência e respeito em todos os processos.</li>
+                    <li><strong>Inovação:</strong> Soluções tecnológicas sempre atualizadas.</li>
+                    <li><strong>Segurança:</strong> Proteção dos dados dos nossos clientes como prioridade.</li>
+                    <li><strong>Compromisso:</strong> Garantia de qualidade e resultados consistentes.</li>
+                    <li><strong>Ética:</strong> Transparência, respeito e integridade em todas as nossas ações.</li>
                 </ul>
             </div>
 
             <div class="info-section">
                 <h2>História</h2>
-                <p>Fundada em 2015, a TH Soluções em TI tem se destacado por oferecer soluções de ponta, com ênfase em segurança e transformação digital.</p>
+                <p>Fundada em 2015, a TH Soluções em TI se destaca por oferecer soluções tecnológicas de ponta, com foco em segurança e transformação digital para empresas de todos os portes.</p>
             </div>
 
             <div class="info-section">
                 <h2>Equipe</h2>
-                <p>Contamos com profissionais qualificados, sempre atualizados para oferecer as melhores soluções em TI.</p>
+                <p>Nosso time é composto por profissionais altamente qualificados e especializados, sempre em busca de soluções inovadoras para atender às necessidades dos nossos clientes.</p>
             </div>
         </section>
     </main>
