--- a/sobre.html
+++ b/sobre.html
@@ -20,16 +20,15 @@
 
     <main class="conteudo">
         <section class="sobre">
-            <header class="sobre-header">
-                <h1>Sobre a TH Soluções em TI</h1>
-                <p>Somos especializados em soluções tecnológicas inovadoras para empresas, focando em segurança, infraestrutura e transformação digital.</p>
-            </header>
 
             <div class="info-section">
                 <h2>Missão</h2>
                 <p>Oferecer soluções de TI que garantam segurança, eficiência e inovação para a evolução dos nossos clientes.</p>
             </div>
-
+   <div class="sobre-header">
+                <h1>Sobre a TH Soluções em TI</h1>
+                <p>Somos especializados em soluções tecnológicas inovadoras para empresas, focando em segurança, infraestrutura e transformação digital.</p>
+            </div>
             <div class="info-section">
                 <h2>Visão</h2>
                 <p>Ser a principal referência em soluções de TI no Brasil, com um compromisso contínuo com a inovação e a excelência no atendimento ao cliente.</p>
