--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TH Soluções em TI - Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -23,28 +25,33 @@
         <p>Soluções inovadoras em Tecnologia da Informação para sua empresa.</p>
     </section>
 
+    <section class="sobre-empresa">
+        <h2>Sobre a TH Soluções em TI</h2>
+        <p>A TH Soluções em TI é uma empresa especializada em fornecer soluções completas e personalizadas de tecnologia da informação. Nosso compromisso é ajudar empresas a melhorar sua infraestrutura, otimizar seus processos e garantir a segurança digital. Com uma equipe altamente qualificada e um portfólio de serviços inovadores, buscamos transformar o mundo digital de nossos clientes, oferecendo soluções eficientes e escaláveis para negócios de todos os tamanhos.</p>
+    </section>
+
     <section class="servicos">
         <h2>Serviços</h2>
         <div class="cards">
             <div class="card">
                 <h3>Cyber Security</h3>
-                <p>Proteja seus dados e sua infraestrutura contra ameaças cibernéticas.</p>
+                <p>Proteja seus dados e sua infraestrutura contra ameaças cibernéticas. Oferecemos soluções de segurança robustas para proteger sua empresa contra ataques e invasões.</p>
             </div>
             <div class="card">
                 <h3>Infraestrutura de Redes</h3>
-                <p>Soluções completas de cabeamento estruturado e redes corporativas.</p>
+                <p>Soluções completas de cabeamento estruturado e redes corporativas. Garantimos a conectividade eficiente e a performance necessária para sua operação.</p>
             </div>
             <div class="card">
                 <h3>Segurança Eletrônica</h3>
-                <p>Monitoramento e sistemas de segurança para proteção física.</p>
+                <p>Monitoramento e sistemas de segurança para proteção física. Implementamos soluções de câmeras e controles de acesso para garantir a segurança de sua empresa.</p>
             </div>
             <div class="card">
                 <h3>Service Desk</h3>
-                <p>Suporte técnico especializado para resolver problemas rapidamente.</p>
+                <p>Suporte técnico especializado para resolver problemas rapidamente. Nossa equipe está pronta para atender e resolver quaisquer problemas de TI que possam surgir.</p>
             </div>
             <div class="card">
                 <h3>IoT</h3>
-                <p>Desenvolvimento de soluções inteligentes para o seu negócio.</p>
+                <p>Desenvolvimento de soluções inteligentes para o seu negócio. Integramos dispositivos e sistemas que permitem otimizar processos e coletar dados em tempo real.</p>
             </div>
         </div>
     </section>
@@ -55,4 +62,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
