--- a/index.html
+++ b/index.html
@@ -30,6 +30,38 @@
         <p>A TH Soluções em TI é uma empresa especializada em fornecer soluções completas e personalizadas de tecnologia da informação. Nosso compromisso é ajudar empresas a melhorar sua infraestrutura, otimizar seus processos e garantir a segurança digital. Com uma equipe altamente qualificada e um portfólio de serviços inovadores, buscamos transformar o mundo digital de nossos clientes, oferecendo soluções eficientes e escaláveis para negócios de todos os tamanhos.</p>
     </section>
 
+    <section class="diferenciais">
+        <h2>Nossos Diferenciais</h2>
+        <p>Na TH Soluções em TI, buscamos sempre a excelência e inovação, oferecendo aos nossos clientes uma série de vantagens que nos tornam únicos no mercado:</p>
+        <ul>
+            <li><strong>Atendimento Personalizado:</strong> Compreendemos as necessidades de cada cliente e criamos soluções sob medida.</li>
+            <li><strong>Equipe Especializada:</strong> Profissionais com vasta experiência nas mais diversas áreas de TI, garantindo a melhor solução para sua empresa.</li>
+            <li><strong>Inovação Contínua:</strong> Estamos sempre atualizados com as últimas tendências tecnológicas para oferecer o que há de melhor no mercado.</li>
+            <li><strong>Suporte 24/7:</strong> Oferecemos suporte contínuo para resolver problemas de forma ágil e eficiente, garantindo a continuidade dos seus negócios.</li>
+        </ul>
+    </section>
+
+    <section class="parceiros">
+        <h2>Nossos Parceiros</h2>
+        <p>Trabalhamos com as melhores tecnologias do mercado, e nossos parceiros são essenciais para garantir a qualidade de nossas soluções:</p>
+        <ul>
+            <li><strong>Microsoft:</strong> Fornecedora de soluções de software e plataformas de nuvem que ajudam nossos clientes a crescerem digitalmente.</li>
+            <li><strong>Cisco:</strong> Referência mundial em soluções de rede, colaboramos para garantir infraestrutura de TI segura e escalável.</li>
+            <li><strong>VMware:</strong> Líder em virtualização, oferecendo soluções que aumentam a eficiência dos recursos de TI.</li>
+            <li><strong>Amazon Web Services (AWS):</strong> Plataforma de computação em nuvem para soluções escaláveis e seguras.</li>
+        </ul>
+    </section>
+
+    <section class="clientes">
+        <h2>Alguns de Nossos Clientes</h2>
+        <p>Temos o orgulho de trabalhar com empresas de diferentes setores, ajudando-as a melhorar suas operações e a crescer no ambiente digital:</p>
+        <ul>
+            <li><strong>Empresa A:</strong> Fornecimento de soluções de segurança e infraestrutura para otimizar a operação em uma grande rede varejista.</li>
+            <li><strong>Empresa B:</strong> Implementação de um sistema IoT para monitoramento inteligente de processos logísticos em tempo real.</li>
+            <li><strong>Empresa C:</strong> Suporte contínuo e infraestrutura de TI para garantir a disponibilidade 24/7 de um portal de serviços financeiros.</li>
+        </ul>
+    </section>
+
     <section class="servicos">
         <h2>Serviços</h2>
         <div class="cards">
