--- a/contatos.html
+++ b/contatos.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contatos - TH Soluções em TI</title>
-    <!-- Corrigindo o caminho do CSS se necessário -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="contatos">
@@ -22,6 +21,12 @@
     <main>
         <section class="contatos">
             <h1>Entre em Contato</h1>
+
+            <p><strong>E-mail:</strong> contato@thsolucoes.com.br</p>
+            <p><strong>Endereço:</strong> Avenida Maranhão, 456, Bairro Atalaia, Aracaju - SE</p>
+            <p><strong>Número de Contato:</strong> (79) 98765-4321</p>
+
+            <h2>Ou envie uma mensagem:</h2>
             <form action="#" method="POST">
                 <div class="form-group">
                     <label for="nome">Nome:</label>
@@ -44,7 +49,6 @@
         <p>&copy; 2024 TH Soluções em TI - Todos os direitos reservados.</p>
     </footer>
 
-    <!-- Se necessário, ajuste o caminho do arquivo JS -->
     <script src="script.js"></script>
 </body>
 </html>
